--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -212,6 +212,7 @@ ja:
       failed_to_assign: 'アサインに失敗しました！'
       email_already_exists: 'すでに同じメールアドレスが登録されています!'
       does_not_exist_email: 'メールアドレスが存在しません。アカウントを作成してください。'
+      leader_change_mail_subject: 'リーダー権限を移動しました'
       cannot_delete_the_leader: 'リーダーは削除できません。'
       cannot_delete_only_a_member: 'このユーザーはこのチームにしか所属していないため、削除できません。'
       delete_member: 'メンバーを削除しました。'
